# ASMRManager

./: .gitignore  LICENSE  README.md  asmr.bat  config.example.py  main.py  pyproject.toml  requirements.txt
LRCPlayer/: __init__.py  main.css  main.py  player.py  test.py
asmrcli/: core.py  dl.py  file.py  hold.py  info.py  pl.py  play.py  query.py  review.py  show.py  sql.py  store.py  view.py
asmrmanager/: __init__.py  __main__.py  _version.py  config.py
asmrmanager/asmrcli/: core.py  dl.py  file.py  hold.py  info.py  main.py  play.py  query.py  review.py  show.py  sql.py  view.py
asmrmanager/cli/: core.py  dl.py  file.py  hold.py  info.py  main.py  pl.py  play.py  query.py  review.py  show.py  sql.py  subtitle.py  utils.py  view.py  vote.py  which.py
asmrmanager/common/: __init__.py  browse_params.py  concurrency.py  download_params.py  fileconverter.py  output.py  parse_filter.py  rj_parse.py  select.py  subtitle.py  types.py  vtt2lrc.py
asmrmanager/database/: database.py  engine.py  manage.py  orm_type.py  q_func.py
asmrmanager/database/utils/: add2db.py  uuid_sqlite.py
asmrmanager/filemanager/: appdirs_.py  exceptions.py  file_zipper.py  manager.py  utils.py
asmrmanager/filemanager/resources/: config.example.toml
asmrmanager/filemanager/resources/sqls.example/: circle_name.sql  score.sql  search.sql  tags.sql  vas.sql
asmrmanager/logger/: __init__.py
asmrmanager/lrcplayer/: __init__.py  lrcparse.py  main.py  player.py
asmrmanager/lrcplayer/player/: base.py  mpdplayer.py  pygameplayer.py  sdplayer.py
asmrmanager/spider/: __init__.py  asmrapi.py  downloader.py  interface.py  playlist.py  spider.py  tag.py
asmrmanager/spider/utils/: IDMHelper.py  aria2_downloader.py  concurrency.py  retry.py
common/: browse_params.py  output.py  parse_filter.py  rj_parse.py  vtt2lrc.py
database/: database.py  engine.py  manage.py  orm_type.py  q_func.py
database/utils/: add2db.py
file_manager/: exceptions.py  file_zipper.py  manager.py  utils.py
filemanager/: __init__.py  exceptions.py  file_zipper.py  manager.py
logger/: __init__.py
spider/: interface.py  spider.py
spider/utils/: IDMHelper.py  aria2_downloader.py  module.py
sqls.example/: search.sql  tags.sql  test.sql
src/asmrmanager/asmrcli/: core.py  dl.py  hold.py  play.py  review.py  sql.py  view.py
src/asmrmanager/database/: engine.py  orm_type.py  q_func.py
src/asmrmanager/database/utils/: add2db.py
src/asmrmanager/filemanager/: __init__.py  utils.py
src/asmrmanager/spider/: interface.py
src/asmrmanager/spider/utils/: aria2_downloader.py
