
[project]
name = "ASMRManager"
dynamic = ["version"]
description = "download, manage and play the voices on asmr.one"
authors = [
    {name = "Quy", email = "quyue294@qq.com"},
]
dependencies = [
    "aiohttp>=3.8.6",
    "chardet==5.1.0",
    "click==8.1.3",
    "colorlog==6.7.0",
    "cutie==0.3.2",
    "pygame==2.4.0",
    "pylrc==0.1.2",
    "rich==13.4.2",
    "SQLAlchemy==2.0.10",
    "textual==0.26.0",
    "mutagen>=1.46.0",
]
requires-python = ">=3.10"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pdm.version]
source = "scm"
write_to = "asmrmanager/_version.py"
write_template = "__version__ = '{}'"

[project.scripts]
asmr = "asmrmanager.cli.main:main"

[project.optional-dependencies]
aria2 = [
    "aria2p>=0.11.3",
]
idm = [
    "comtypes>=1.2.0",
]
tui = [
  "trogon==0.4.0",
]
all = ['asmrmanager[aria2,idm,tui]']

[tool.black]
line-length = 79
preview = true
