
[project]
name = "ASMRManager"
dynamic = ["version"]
description = "download, manage and play the voices on asmr.one"
keywords = [
  "asmr",
  "downloader",
  "music",
  "player",
  "manager",
  "cli",
  "tui",
  "commandline",
  "terminal",
]
authors = [{ name = "SLQY", email = "sqiyel@gmail.com" }]
dependencies = [
  "aiohttp>=3.8.6",
  "chardet>=5.1.0",
  "click>=8.1.3",
  "pylrc==0.1.2",
  "rich>=13.0.0",
  "SQLAlchemy>=2.0.36",
  "textual>=1",
  "mutagen>=1.46.0",
  "appdirs>=1.4.4",
  "toml>=0.10.2",
  "beaupy>=3.11.0",
  "asyncstdlib>=3.13.1",
  "xxhash>=3.5.0",
]
requires-python = ">=3.12"
readme = "README.md"
license = { text = "MIT" }
urls = { 'repository' = 'https://github.com/slqy123/ASMRManager' }

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pdm.version]
source = "scm"
write_to = "asmrmanager/_version.py"
write_template = "__version__ = \"{}\""

[project.scripts]
asmr = "asmrmanager.cli.main:main"

[project.optional-dependencies]
# deprecated 
pygame = ["pygame>=2.5.0"]
mpd = ["python-mpd2>=3.1.0"]
# ---
aria2 = ["aioaria2>=1.3.4"]
idm = ["comtypes>=1.2.0"]
tui = ["trogon>=0.4.0"]
player = ["sounddevice>=0.5.3", "soundfile>=0.13.1"]
subtitle = ["faster-whisper>=1.1.1", "ctranslate2>=4.6.0"]
image = ["textual-image>=0.8.5"]
dev = [
  "pyinstrument>=4.6.2",
  "viztracer>=0.16.3",
  "ruff>=0.11.5",
  "mypy>=1.15.0",
]

all = ['asmrmanager[aria2,idm,tui,player,subtitle,image]']

[tool.ruff]
line-length = 79

[tool.ruff.lint]
ignore = ['E402', 'E731']
